# cmd/main.go
@@ -86,6 +86,7 @@ func main() {
 	e.POST("/posts", postHdl.CreatePost, handler.AuthMiddleware(tokenSvc))
 	e.GET("/posts/:id", postHdl.GetPostByID, handler.AuthMiddleware(tokenSvc))
 	e.PUT("/posts/:id", postHdl.UpdatePost, handler.AuthMiddleware(tokenSvc))
+	e.DELETE("/posts/:id", postHdl.DeletePost, handler.AuthMiddleware(tokenSvc))
 
 	// Start server
 	lgr.Info(ctx, "starting server", "port", cfg.App.Port)
